[package]
name = "orbital_elements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time =	{version = "0.3", features = ["macros"]}
nalgebra = "0.31.1"
physical_constants = "0.5.0"
astro = "2.0.0"

[[bin]]
name = "orbital_elements"
path = "./src/main.rs"
